--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -141,6 +141,9 @@ collections:
         - label: "Slideshow Autoplay Time, ms"
           name: "speed"
           widget: "string"
+        - label: "Section ID"
+          name: "id"
+          widget: "string"
         - label: "Slides Info"
           name: "item"
           widget: "list"
@@ -154,6 +157,12 @@ collections:
             - label: "Text"
               name: "text"
               widget: "markdown"
+            - label: "Button"
+              name: button
+              widget: boolean
+            - label: "Button Link"
+              name: button_link
+              widget: string
     - label: "Our process"
       name: "our_process"
       file: "themes/carpal-tunnel/data/our_process.yml"
@@ -163,6 +172,9 @@ collections:
           widget: "string"
         - label: "Subheading"
           name: "subheading"
+          widget: "string"
+        - label: "Section ID"
+          name: "id"
           widget: "string"
         - label: "Our Process List"
           name: "item"
@@ -176,6 +188,9 @@ collections:
       fields:
         - label: "Heading"
           name: "heading"
+          widget: "string"
+        - label: "Section ID"
+          name: "id"
           widget: "string"
         - label: "Testimonials List"
           name: "review"
@@ -208,6 +223,9 @@ collections:
         - label: "Homepage Heading"
           name: "home_title"
           widget: "string"
+        - label: "Homepage Section ID"
+          name: "home_id"
+          widget: "string"
         - label: "Members"
           name: "member"
           widget: "list"
@@ -220,6 +238,9 @@ collections:
             - {label: "Photo", name: "image", widget: "file"}
         - label: "Additional Staff Heading"
           name: "staff_title"
+          widget: "string"
+        - label: "Staff Section ID"
+          name: "staff_id"
           widget: "string"
         - label: "Additional Staff"
           name: "staff"
@@ -256,6 +277,9 @@ collections:
               - label: "Question"
                 name: "question"
                 widget: "string"
+              - label: "Question ID"
+                name: "id"
+                widget: "string"
               - label: "Answer"
                 name: "answer"
                 widget: "markdown"
@@ -286,6 +310,9 @@ collections:
               - label: "Heading"
                 name: "title"
                 widget: "markdown"
+              - label: "Section ID"
+                name: "id"
+                widget: "string"
               - label: "Photo"
                 name: "photo"
                 widget: "file"
@@ -298,6 +325,9 @@ collections:
             fields:
               - label: "Clinic Heading"
                 name: "clinic_title"
+                widget: "string"
+              - label: "Section ID"
+                name: "id"
                 widget: "string"
               - label: "Clinic Image"
                 name: "clinic_image"
