--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -144,6 +144,7 @@ collections:
         - label: "Section ID"
           name: "id"
           widget: "string"
+          hint: No spaces allowed
         - label: "Slides Info"
           name: "item"
           widget: "list"
@@ -163,6 +164,7 @@ collections:
             - label: "Button Link"
               name: button_link
               widget: string
+              hint: Use relative link (if link address is "https://domain.com/about/" type "about". If button should go to some section type f.e. "about/#section-id" or "#section-id", if this section is on the same page with this button)
     - label: "Our process"
       name: "our_process"
       file: "themes/carpal-tunnel/data/our_process.yml"
@@ -176,6 +178,7 @@ collections:
         - label: "Section ID"
           name: "id"
           widget: "string"
+          hint: No spaces allowed
         - label: "Our Process List"
           name: "item"
           widget: "list"
@@ -192,6 +195,7 @@ collections:
         - label: "Section ID"
           name: "id"
           widget: "string"
+          hint: No spaces allowed
         - label: "Testimonials List"
           name: "review"
           widget: "list"
@@ -226,6 +230,7 @@ collections:
         - label: "Homepage Section ID"
           name: "home_id"
           widget: "string"
+          hint: No spaces allowed
         - label: "Members"
           name: "member"
           widget: "list"
@@ -242,6 +247,7 @@ collections:
         - label: "Staff Section ID"
           name: "staff_id"
           widget: "string"
+          hint: No spaces allowed
         - label: "Additional Staff"
           name: "staff"
           widget: "list"
@@ -280,6 +286,7 @@ collections:
               - label: "Question ID"
                 name: "id"
                 widget: "string"
+                hint: No spaces allowed
               - label: "Answer"
                 name: "answer"
                 widget: "markdown"
@@ -313,6 +320,7 @@ collections:
               - label: "Section ID"
                 name: "id"
                 widget: "string"
+                hint: No spaces allowed
               - label: "Photo"
                 name: "photo"
                 widget: "file"
@@ -329,6 +337,7 @@ collections:
               - label: "Section ID"
                 name: "id"
                 widget: "string"
+                hint: No spaces allowed
               - label: "Clinic Image"
                 name: "clinic_image"
                 widget: "file"
