Added favicon / Meta tag testing

--- a/config.yml
+++ b/config.yml
@@ -23,5 +23,7 @@ params:
   appointment_text: Make an appointment today
   author: modstud.io
   description: This is meta description for this site
+  images:
+  - assets/images/carpal-tunnel-center.jpg
   googleAnalitycsID: Your ID
   logo: assets/images/logo.svg
