Changed images / Config changes

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -49,6 +49,9 @@ collections:
             - name: "description"
               label: "Description"
               widget: "text"
+            - name: "images"
+              label: "Meta Image"
+              widget: "list"
             - name: "author"
               label: "Site Author"
               widget: "string"
