--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -51,7 +51,7 @@ collections:
               widget: "text"
             - name: "images"
               label: "Meta Image"
-              widget: "list"
+              widget: "file"
             - name: "author"
               label: "Site Author"
               widget: "string"
@@ -128,6 +128,9 @@ collections:
         - label: "Description"
           name: "description"
           widget: "text"
+        - name: "images"
+          label: "Meta Image"
+          widget: "file"
         - label: "Top section background image"
           name: "background"
           widget: "file"
@@ -220,6 +223,9 @@ collections:
         - label: "Description"
           name: "description"
           widget: "text"
+        - name: "images"
+          label: "Meta Image"
+          widget: "file"
         - label: "Top section background image"
           name: "background"
           widget: "file"
@@ -272,6 +278,9 @@ collections:
           - label: "Description"
             name: "description"
             widget: "text"
+          - name: "images"
+            label: "Meta Image"
+            widget: "file"
           - label: "Top section background image"
             name: "background"
             widget: "file"
@@ -306,6 +315,9 @@ collections:
           - label: "Description"
             name: "description"
             widget: "text"
+          - name: "images"
+            label: "Meta Image"
+            widget: "file"
           - label: "Top section background image"
             name: "background"
             widget: "file"
