Update General “general_info”

--- a/config.yml
+++ b/config.yml
@@ -27,4 +27,5 @@ params:
     release. Personalized care by our team of experts ensures that you are in
     good hands.
   googleAnalitycsID: Your ID
+  images: /assets/images/carpal-tunnel-center.jpg
   logo: assets/images/logo.svg
