--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -248,7 +248,7 @@ collections:
             - {label: "Specialty", name: "specialty", widget: "string"}
             - {label: "ID", name: "id", widget: "string"}
             - {label: "Text", name: "text", widget: "markdown"}
-            - {label: "Link to Linkedin", name: "linkedin_link", widget: "string"}
+            - {label: "Link to Linkedin", name: "linkedin_link", widget: "string", required: false}
             - {label: "Photo", name: "image", widget: "file"}
         - label: "Additional Staff Heading"
           name: "staff_title"
