Config quick fix

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -263,7 +263,7 @@ collections:
           fields:
             - {label: "Name", name: "title", widget: "string"}
             - {label: "Specialty", name: "specialty", widget: "string"}
-            - {label: "Link to Linkedin", name: "linkedin_link", widget: "string"}
+            - {label: "Link to Linkedin", name: "linkedin_link", widget: "string", required: false}
             - {label: "Photo", name: "image", widget: "file"}
   - label: "FAQ"
     name: "faq"
