--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -166,11 +166,13 @@ collections:
             - label: "Text"
               name: "text"
               widget: "markdown"
+            - label: "Button"
+              name: button
+              widget: boolean
             - label: "Button Link"
               name: button_link
               widget: string
               hint: Use relative link (if link address is "https://domain.com/about/" type "about". If button should go to some section type f.e. "about/#section-id" or "#section-id", if this section is on the same page with this button)
-              required: false
     - label: "Our process"
       name: "our_process"
       file: "themes/carpal-tunnel/data/our_process.yml"
