Update Homepage “testimonials”

--- a/themes/carpal-tunnel/data/testimonials.yml
+++ b/themes/carpal-tunnel/data/testimonials.yml
@@ -1,11 +1,20 @@
-heading: "What our patients say"
+heading: What our patients say
 id: testimonials
 review:
-  - name: "Rafał Olbromski"
-    company: "Widelab"
-    image: "assets/images/user_1.jpg"
-    text: "Ut molestie a, ultricies porta urna. Vestibulum commodo volutpat a, convallis ac, laoreet enim. Phasellus fermentum in, dolor. Pellentesque facilisis. Nulla imperdiet sit amet magna. Vestibulum dapibus, mauris nec malesuada fames ac turpis velit."
-  - name: "Landon Carter"
-    company: "Actor"
-    image: "assets/images/user_1.jpg"
-    text: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam temporibus totam, excepturi nesciunt earum ea ex voluptas porro vero nemo maxime omnis officiis exercitationem unde illo adipisci itaque doloremque, maiores, veniam voluptatum fugit nobis veritatis. Alias perspiciatis cupiditate, hic voluptas?"
+  - company: Widelab
+    image: assets/images/user_1.jpg
+    name: Rafał Olbromski
+    text: >-
+      Ut molestie a, ultricies porta urna. Vestibulum commodo volutpat a,
+      convallis ac, laoreet enim. Phasellus fermentum in, dolor. Pellentesque
+      facilisis. Nulla imperdiet sit amet magna. Vestibulum dapibus, mauris nec
+      malesuada fames ac turpis velit.
+  - company: ''
+    image: assets/images/user_1.jpg
+    name: Landon Carter
+    text: >-
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam temporibus
+      totam, excepturi nesciunt earum ea ex voluptas porro vero nemo maxime
+      omnis officiis exercitationem unde illo adipisci itaque doloremque,
+      maiores, veniam voluptatum fugit nobis veritatis. Alias perspiciatis
+      cupiditate, hic voluptas?
