--- a/themes/carpal-tunnel/data/testimonials.yml
+++ b/themes/carpal-tunnel/data/testimonials.yml
@@ -3,16 +3,6 @@ id: testimonials
 review:
   - company: ''
     image: ''
-    name: Eloise Cannon
-    text: >-
-      ## Amazing doctor, wonderful human being.
-
-
-      Amazing doctor, wonderful human being. If there were more people like him
-      trustworthy,honest,sympathetic,empathetic.can't say enough! He literally
-      changed my life. Helped me in so many ways, thank you !
-  - company: ''
-    image: ''
     name: Kate Washington
     text: >-
       I am extremely meticulous and it is rare for me to be satisfied with
@@ -21,3 +11,10 @@ review:
       my carpal tunnel surgery and even talked me out of a different additional
       expensive cosmetic procedure I wanted because he thought I would not be a
       good candidate. Good results and good doctor.
+  - company: ''
+    image: ''
+    name: Eloise Cannon
+    text: >-
+      Amazing doctor, wonderful human being. If there were more people like him
+      trustworthy, honest, sympathetic, empathetic. I can't say enough! He
+      literally changed my life. Helped me in so many ways, thank you!
